objects/ssot__GeneratedOperationPlanExecution__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeneratedOpPlanExecutionStatus__c</fullName>
        <label>Generated Op Plan Execution Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeneratedOperationPlanId__c</fullName>
        <label>Generated Operation Plan</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Generated Operation Plan Execution Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128380496_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GeneratedOperationPlanExecution_Gene_rel</label>
        <referenceTo>ssot__GeneratedOperationPlan__dlm</referenceTo>
        <relationshipLabel>GeneratedOperationPlanExecution_Gene_rel</relationshipLabel>
        <relationshipName>rel_1723128380496_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>